--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/express": "^4.17.21",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "socket.io": "^4.7.3"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.10.8",
+    "typescript": "^5.3.3"
   }
 }
